Set theme jekyll-theme-architect

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-architect
 download: https://github.com/garythegoof/X-Input-Test/raw/master/X%20Input%20Test.zip
