--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-architect
-download: https://github.com/garythegoof/X-Input-Test/raw/master/X%20Input%20Test.zip
+download: https://github.com/garythegoof/X-Input-Test/releases/download/XITV1/X.Input.Test.zip
