--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,5 @@
+title: X Input Test
+logo: https://i.imgur.com/tZI8bjN.png
+description: Download X Input Test here!
+show_downloads: true
 theme: jekyll-theme-minimal
